--- a/html/insertNewComp.html
+++ b/html/insertNewComp.html
@@ -1,11 +1,11 @@
 <div id="new_comp" style="margin-top: 70px">
-    <h1 style="text-align: center; font-family: 'Maven Pro', sans-serif; font-size:4vw; text-shadow: 2px 2px #808080"><b>Add New Company</b></h1>
+    <h1><b>Add New Company</b></h1>
     <center>
-        <font face="Maven Pro">
+
             <p>Please insert the following details<br>
             of the company you wish to add</p>
-        </font>
-        <font face="Maven Pro">
+
+
             <table border="0">
                 <form method="Post">
                     <tr><td>Company Name: </td><td><input class="form-control" type="text" name="companyName" id="compName"></td></tr>
@@ -18,7 +18,7 @@
                 <tr><td></td><td><button type="submit" value="send" class="btn btn-outline-dark" ng-click="insertNewComp()"><i class="fas fa-plus"></i>    Add</button>
                 <button type="reset" value="Reset form" class="btn btn-outline-dark" ng-click="clearInsert()"><i class="fas fa-eraser"></i>    Clear</button></td></tr>
             </table>
-        </font>
+
     </center>
 </div>
 
@@ -45,6 +45,11 @@
 <div class="alert alert-danger alert-dismissible" id="no_compName_typed">
     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
     <strong>Oops!</strong> Couldn't add company, please insert company name!
+</div>
+
+<div id="loading_new_comp">
+    <h4>Adding...</h4>
+    <div class="loader"></div>
 </div>
 
 <!--Arial Black, Gadget, sans-serif-->
