--- a/html/updateComp.html
+++ b/html/updateComp.html
@@ -1,4 +1,6 @@
-<div id="update_comp" style="margin-top: 70px">
+
+
+<!--<div id="update_comp" style="margin-top: 70px">
     <h1 style="text-align: center; font-family: 'Maven Pro', sans-serif; font-size:4vw; text-shadow: 2px 2px #808080"><b>Update Existing Company</b></h1>
     <center>
         <font face="Maven Pro">
@@ -41,4 +43,4 @@
 <div class="alert alert-danger alert-dismissible" id="id_doesnt_exists_update">
     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
     <strong>Oops!</strong> Couldn't update company, ID doesn't exists!
-</div>
+</div>-->
