--- a/html/insertNewComp.html
+++ b/html/insertNewComp.html
@@ -8,12 +8,12 @@
 
             <table border="0">
                 <form method="Post">
-                    <tr><td>Company Name: </td><td><input class="form-control" type="text" name="companyName" id="compName"></td></tr>
-                    <tr><td>Street: </td><td><input class="form-control" type="text" name="street" id="compStreet"></td></tr>
-                    <tr><td>city: </td><td><input class="form-control" type="text" name="city" id="compCity"></td></tr>
-                    <tr><td>country: </td><td><input class="form-control" type="text" name="country" id="compCountry"></td></tr>
-                    <tr><td>state: </td><td><input class="form-control" type="text" name="state" id="compState"></td></tr>
-                    <tr><td>RSSD_ID: </td><td><input class="form-control" type="text" name="companyID" id="compID"></td></tr>
+                    <tr><td>Company Name: </td><td><input class="form-control" type="text" name="companyName" id="compName" placeholder="type company name here"></td></tr>
+                    <tr><td>Street: </td><td><input class="form-control" type="text" name="street" id="compStreet" placeholder="type street name here"></td></tr>
+                    <tr><td>city: </td><td><input class="form-control" type="text" name="city" id="compCity" placeholder="type city name here"></td></tr>
+                    <tr><td>country: </td><td><input class="form-control" type="text" name="country" id="compCountry" placeholder="type country name here"></td></tr>
+                    <tr><td>state: </td><td><input class="form-control" type="text" name="state" id="compState" placeholder="type state name here"></td></tr>
+                    <tr><td>RSSD_ID: </td><td><input class="form-control" type="text" name="companyID" id="compID" placeholder="type RSSD_ID here"></td></tr>
                 </form>
                 <tr><td></td><td><button type="submit" value="send" class="btn btn-outline-dark" ng-click="insertNewComp()"><i class="fas fa-plus"></i>    Add</button>
                 <button type="reset" value="Reset form" class="btn btn-outline-dark" ng-click="clearInsert()"><i class="fas fa-eraser"></i>    Clear</button></td></tr>
