--- a/html/updateComp.html
+++ b/html/updateComp.html
@@ -1,4 +1,10 @@
+<div id="update_comp" style="margin-top: 70px">
+    <h1>Update Existing Company</h1>
+    <center>
+        <p>Please select the field you wish to update by</p>
 
+    </center>
+</div>
 
 <!--<div id="update_comp" style="margin-top: 70px">
     <h1 style="text-align: center; font-family: 'Maven Pro', sans-serif; font-size:4vw; text-shadow: 2px 2px #808080"><b>Update Existing Company</b></h1>
