working on comments

--- a/html/home.html
+++ b/html/home.html
@@ -45,7 +45,9 @@
 					<textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="1"></textarea>
 				</div>
 				<div class="col-sm-1 contactFields">
-					<button class="btn btn-info" type="submit">Send</button>
+					<button class="btn btn-info" type="submit" ng-click="enter_comment()">Send</button>
+				</div>
+				<div id="errorComment">
 				</div>
 			</div>
 		</div>
