--- a/html/updateComp.html
+++ b/html/updateComp.html
@@ -2,7 +2,10 @@
     <h1>Update Existing Company</h1>
     <center>
         <p>Please select the field you wish to update by</p>
-
+        <table border="0">
+            <button type="submit" value="Send" class="btn btn-outline-dark" ng-click="show_update_comp_by_name()"><i class="fas fa-signature"></i>    Update by name</button>
+            <button type="submit" value="Send" class="btn btn-outline-dark" ng-click="show_update_comp_by_ID()"><i class="fas fa-fingerprint"></i>    Update by RSSD_ID</button>
+        </table>
     </center>
 </div>
 
