--- a/html/searchByCity.html
+++ b/html/searchByCity.html
@@ -6,13 +6,69 @@
 
         <div class="row">
             <div class="col-sm-4">
-                <label>Country:</label>
-                <input type="text" list="selectedCountry" placeholder=" Select Country..." ng-change="updateDataCountryChange(); getIframeSrc()" ng-model="selectedCountryValue">
-                <datalist id="selectedCountry">
-                    <option ng-repeat="country in arrayOfCountries" value="{{country}}">{{country}}</option>
-                </datalist>
 
-                <div id = "stateOptions" style="display: none">
+                <div class="container-fluid">
+                    <br>
+                    <div class="row">
+                        <div class="col-sm-4" style="text-align: -webkit-left;">
+                            <label>Country:</label>
+                        </div>
+                        <div class="col-sm-8">
+                            <input type="text" list="selectedCountry" placeholder=" Select Country..." ng-change="updateDataCountryChange(); getIframeSrc()" ng-model="selectedCountryValue">
+                            <datalist id="selectedCountry">
+                                <option ng-repeat="country in arrayOfCountries" value="{{country}}">{{country}}</option>
+                            </datalist>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="container-fluid" id = "stateOptions" style="display: none">
+                    <br>
+                    <div class="row">
+                        <div class="col-sm-4" style="text-align: -webkit-left;">
+                            <label>State:</label>
+                        </div>
+                        <div class="col-sm-8">
+                            <input type="text" list="selectedState" placeholder=" Select State..." ng-change="changeCity('True'); getIframeSrc()" ng-model="selectedStateValue">
+                            <datalist id="selectedState">
+                                <option ng-repeat="state in arrayOfStates" value="{{state}}">{{state}}</option>
+                            </datalist>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container-fluid" id = "cityOptions" style="display: none">
+                    <br>
+                    <div class="row">
+                        <div class="col-sm-4" style="text-align: -webkit-left;">
+                            <label>City:</label>
+                        </div>
+                        <div class="col-sm-8">
+                            <input type="text" list="selectedCity" placeholder=" Select City..." ng-change="changeStreet(); getIframeSrc()" ng-model="selectedCityValue">
+                            <datalist id="selectedCity">
+                                <option ng-repeat="city in arrayOfCities" value="{{city}}">{{city}}</option>
+                            </datalist>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container-fluid" id = "streetOptions" style="display: none">
+                    <br>
+                    <div class="row">
+                        <div class="col-sm-4" style="text-align: -webkit-left;">
+                            <label>Street:</label>
+                        </div>
+                        <div class="col-sm-8">
+                            <input type="text" list="selectedStreet" placeholder=" Select Street..." ng-change="getIframeSrc()" ng-model="selectedStreetValue">
+                            <datalist id="selectedStreet">
+                                <option ng-repeat="street in arrayOfStreets" value="{{street}}">{{street}}</option>
+                            </datalist>
+                        </div>
+                    </div>
+                </div>
+
+                <!--<div id = "stateOptions" style="display: none">
                     <br>
                     <label>State:</label>
                     <input type="text" list="selectedState" placeholder=" Select State..." ng-change="changeCity('True'); getIframeSrc()" ng-model="selectedStateValue">
@@ -38,7 +94,7 @@
                     <datalist id="selectedStreet">
                         <option ng-repeat="street in arrayOfStreets" value="{{street}}">{{street}}</option>
                     </datalist>
-                </div>
+                </div>-->
 
             </div>
 
