--- a/html/nav.html
+++ b/html/nav.html
@@ -133,4 +133,56 @@
 	</div>
 
 
+
+	<div class="modal fade" id="admin_comment_modal" tabindex="-1" role="dialog" aria-labelledby="Admin comment Modal" aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" >Comments</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<table  class="table table-striped table-bordered"  >
+						<tr>
+							<th>
+								name
+							</th>
+							<th>
+								email
+							</th>
+							<th>
+								comment
+							</th>
+
+						</tr>
+						<tr ng-repeat="user in allcomments">
+							<td>
+								{{user.name}}
+							</td>
+							<td>
+								{{user.email}}
+							</td>
+							<td>
+								{{user.comment}}
+							</td>
+
+
+
+						</tr>
+					</table>
+
+
+
+
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 </div>
