--- a/html/searchByName.html
+++ b/html/searchByName.html
@@ -10,10 +10,9 @@
               <div class="input-group">
                   <div class="dropdown show">
                       <a class="btn btn-secondary dropdown-toggle" style="width: fit-content" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Filter By:
+                          Filter By: Contains
                       </a>
                       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                          <a class="dropdown-item" href="#" ng-click="filterBy('None')">None</a>
                           <a class="dropdown-item" href="#" ng-click="filterBy('Contains')">Contains</a>
                           <a class="dropdown-item" href="#" ng-click="filterBy('Equals')">Equals</a>
                       </div>
