--- a/html/showDeleteResults.html
+++ b/html/showDeleteResults.html
@@ -1,11 +1,16 @@
 <div id="show_delete_results">
     <center>
     <p>Select the companies you wish to delete</p>
-    <table>
+    <table class="table table-striped table-bordered">
         <tr>
             <th>Company name</th>
             <th>RSSD_ID</th>
             <th>Delete?</th>
+        </tr>
+        <tr ng-repeat="result in resultsOfDeleteSearch">
+            <td>{{result.name}}</td>
+            <td>{{result.id}}</td>
+            <td><input type="checkbox" value=""></td>
         </tr>
     </table>
     <button type="submit" value="Send" class="btn btn-outline-dark" ng-click="deleteComp()"><i class="fa fa-trash"></i>   Delete</button>
