delete selected results

--- a/html/deleteBySearching.html
+++ b/html/deleteBySearching.html
@@ -20,3 +20,13 @@
         </table>
     </center>
 </div>
+
+<div class="alert alert-danger alert-dismissible" id="no_filter">
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    <strong>Oops!</strong> Couldn't search companies, please choose the way you wish to filter your results.
+</div>
+
+<div id="searching_delete_results">
+    <h4>Please wait...</h4>
+    <div class="loader"></div>
+</div>
