--- a/html/showDeleteResults.html
+++ b/html/showDeleteResults.html
@@ -10,9 +10,10 @@
         <tr ng-repeat="result in resultsOfDeleteSearch">
             <td>{{result.name}}</td>
             <td>{{result.id}}</td>
-            <td><input type="checkbox" value=""></td>
+            <td><button type="submit" value="Send" class="btn btn-outline-dark" ng-click="deleteSearchResults(result.name)"><i class="fa fa-trash"></i>   Delete</button>
+                <!--<input ng-if="result.delete==1" type="checkbox" value=""  ng-false-value="0" ng-true-value="1"  ng-model="result.isChecked" checked disabled>
+                <input ng-if="result.delete==0" type="checkbox" value="" ng-false-value="0" ng-true-value="1"  ng-model="result.isChecked" checked>--></td>
         </tr>
     </table>
-    <button type="submit" value="Send" class="btn btn-outline-dark" ng-click="deleteComp()"><i class="fa fa-trash"></i>   Delete</button>
     </center>
 </div>
