show update results

--- a/html/deleteBySearching.html
+++ b/html/deleteBySearching.html
@@ -26,7 +26,7 @@
     <strong>Oops!</strong> Couldn't search companies, please choose the way you wish to filter your results.
 </div>
 
-<div id="searching_delete_results">
+<div id="searching_for_results">
     <h4>Please wait...</h4>
     <div class="loader"></div>
 </div>
