add clear update by searching

--- a/html/updateBySearching.html
+++ b/html/updateBySearching.html
@@ -22,3 +22,13 @@
 
     </center>
 </div>
+
+<div id="loading_search_results_update">
+    <h4>Searching...</h4>
+    <div class="loader"></div>
+</div>
+
+<div class="alert alert-danger alert-dismissible" id="no_filter_update">
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    <strong>Oops!</strong> Couldn't search companies, please choose the way you wish to filter your results.
+</div>
