add second line to search result

--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -53,7 +53,7 @@
                                     <div class="col-sm-8">
                                         <br>
                                         <h3 id="selectedCompanyName"></h3>
-                                        <h4>Public company of Financial services</h4>
+                                        <h4 id="secondTitleResult"></h4>
                                     </div>
                                     <div class="col-sm-4" style="margin-top: 20px">
                                         <img class ="logoImg" src="//upload.wikimedia.org/wikipedia/commons/thumb/0/00/Ally_Financial.svg/360px-Ally_Financial.svg.png"
