--- a/html/insertNewFile.html
+++ b/html/insertNewFile.html
@@ -1,26 +1,46 @@
 <div id="new_file" style="margin-top: 70px">
-    <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
-    <h1 style="text-align: center; font-family: Comfortaa; font-size:4vw; text-shadow: 2px 2px #808080"><b>Insert New File</b></h1>
-    <center>
-        <font face="Comfortaa">
+
+    <h1 style="text-align: center; font-size:4vw; text-shadow: 2px 2px #808080"><b>Insert New File</b></h1>
+
             <p>Please select the file you wish to upload</p>
-        </font>
-        <font face="Comfortaa">
-            <table border="0">
+
+        <div style="text-align: center;">
             <form method="post" enctype="multipart/form-data">
-                <tr><td><input name="selectedFile" type="file" id="uploadedFile"/>
-                <!--<tr><td><input type="file" name="file" onchange="angular.element(this).scope().service(this.files)"/>-->
-                <input type="submit" name="submit" value="Upload" class="btn btn-outline-dark" ng-click="uploadFile()"/></tr></td><br>
-                <tr><td><div class="radio">
-                    <label><input type="radio" name="optradio" id="replaceData" checked> Replace data for existing companies</label>
-                </div></tr></td>
-                <tr><td><div class="radio">
-                    <label><input type="radio" name="optradio" id="dontReplaceData"> Don't replace data for existing companies</label>
-                </div></tr></td>
+                <table border="0" align="center">
+
+                    <tr>
+                        <td>
+                            <input type="file" ng-model="myFileName" file-reader="fileContent" file-model="myFile"/>
+                    <!--<tr><td><input type="file" name="file" onchange="angular.element(this).scope().service(this.files)"/>-->
+                            <input type="submit" name="submit" value="Upload" class="btn btn-outline-dark" ng-click="uploadFile()"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="form-check">
+                                <label>
+                                    <input type="radio" name="radio"  id="replaceData" checked>
+
+                                        Replace data for existing companies
+                                </label>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="form-check">
+                                <label>
+                                    <input type="radio" name="radio" id="dontReplaceData">
+
+                                    Don't replace data for existing companies
+                                </label>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
             </form>
-            </table>
-        </font>
-    </center>
+        </div>
+
 </div>
 
 <div class="alert alert-success alert-dismissible" id="added_file_successfully">
