--- a/html/showUpdateResults.html
+++ b/html/showUpdateResults.html
@@ -1,6 +1,22 @@
 <div id="show_update_results">
     <center>
-        <p>Select the companies you wish to update</p>
+        <br>
+        <p>Select the the fields and the companies you wish to update</p>
+        <table border="0">
+            <form method="Post">
+                <tr><td>Details to Update: </td><td><select class="custom-select mr-sm-2" name="compDetailsToUpdateBySearch" id="compDetailsToUpdateBySearch" ng-model="selectedCompDetailsToUpdateBySearch" placeholder="select field..">
+                    <option> </option>
+                    <option>Company name</option>
+                    <option>street</option>
+                    <option>city</option>
+                    <option>country</option>
+                    <option>state</option>
+                </select></td><td></td></tr>
+                <tr><td>New Information: </td><td><input type="text" name="ToUpdateBySearch" id="newInfoToUpdateBySearch" class="form-control" ng-model="selectedNewInfo" placeholder="type here.."></td>
+                <td><button type="reset" value="Reset form" class="btn btn-outline-dark" ng-click="clearInfoUpdateBySearch()"><i class="fas fa-eraser"></i>    Clear</button></td></tr>
+            </form>
+        </table>
+        <br>
         <table class="table table-striped table-bordered">
             <tr>
                 <th>Company name</th>
