--- a/html/updateBySearching.html
+++ b/html/updateBySearching.html
@@ -24,7 +24,7 @@
 </div>
 
 <div id="loading_search_results_update">
-    <h4>Searching...</h4>
+    <h4>Please wait...</h4>
     <div class="loader"></div>
 </div>
 
