--- a/html/updateCompByID.html
+++ b/html/updateCompByID.html
@@ -12,7 +12,7 @@
                     </datalist></td></tr>
                 <tr><td>Details to Update: </td><td><select class="custom-select mr-sm-2" name="compDetails" id="compDetailsUpdateById" ng-model="selectedCompDetails" placeholder="select field..">
                     <option> </option>
-                    <option>Company name</option>
+                    <option>name</option>
                     <option>street</option>
                     <option>city</option>
                     <option>country</option>
