add logo to search result

--- a/html/searchResults.html
+++ b/html/searchResults.html
@@ -55,9 +55,8 @@
                                         <h3 id="selectedCompanyName"></h3>
                                         <h4 id="secondTitleResult"></h4>
                                     </div>
-                                    <div class="col-sm-4" style="margin-top: 20px">
-                                        <img class ="logoImg" src="//upload.wikimedia.org/wikipedia/commons/thumb/0/00/Ally_Financial.svg/360px-Ally_Financial.svg.png"
-                                             alt="logo" height="100" width="100">
+                                    <div class="col-sm-4" style="margin-top: 20px" id="companyLogoDiv">
+                                        <img class ="logoImg" id="companyLogo" src="" alt="logo" height="100" width="150">
                                     </div>
                                 </div>
                             </div>
