--- a/html/nav.html
+++ b/html/nav.html
@@ -186,4 +186,61 @@
 	</div>
 
 
+
+	<div class="modal fade" id="admin_file_modal" tabindex="-1" role="dialog" aria-labelledby="Admin file Modal" aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" >Files Statuses</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<table  class="table table-striped table-bordered"  >
+						<tr>
+							<th>
+								User
+							</th>
+							<th>
+								Time
+							</th>
+							<th>
+								File
+							</th>
+							<th>
+								Status
+							</th>
+
+						</tr>
+						<tr ng-repeat="file in allFiles">
+							<td>
+								{{file.user}}
+							</td>
+							<td>
+								{{file.time}}
+							</td>
+							<td>
+								{{file.file_name}}
+							</td>
+							<td>
+								{{file.status}}
+							</td>
+
+
+						</tr>
+					</table>
+
+
+
+
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 </div>
