add separator line to industry $ change sql of revenue & repair products sql

--- a/html/industry.html
+++ b/html/industry.html
@@ -18,6 +18,7 @@
         </div>
     </div>
 
+    <hr class="industrySeparatorLine">
 
     <div class="secondStats" style="height: fit-content">
 
